style(LoginPage): Fix align checkbox with text

--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -44,7 +44,6 @@
 
 .CGU-description {
   margin-left: 8px;
-  margin-top: 4px;
   cursor: pointer;
   color: var(--main-color);
 }
@@ -79,9 +78,5 @@
   .login-container-mobile .custom-btn {
     font-size: var(--tablet-font-size);
     height: 59px;
-  }
-
-  .CGU-description {
-    margin-top: 6px;
   }
 }
